# causal_inference_mastery

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CURRENT_WORK.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  docs.yml  full-test.yml  scheduled.yml
benchmarks/: __init__.py  config.py  dgp.py  runner.py  utils.py
benchmarks/cross_language/: __init__.py  julia_benchmarks.py  runner.py
benchmarks/golden/: benchmark_baseline.json  generate_baseline.py
benchmarks/methods/: __init__.py  bayesian.py  bounds.py  bunching.py  cate.py  control_function.py  did.py  dtr.py  iv.py  mediation.py  mte.py  observational.py  panel.py  principal_strat.py  psm.py  qte.py  rct.py  rdd.py  rkd.py  scm.py  selection.py  sensitivity.py  shift_share.py
book/: Makefile  bibliography.bib  main.aux  main.bbl  main.blg  main.out  main.tex  main.toc
book/_minted/: 02F97690DD6ED0A0B148121D5E96B03F.highlight.minted  0310237CDA2DDFD5308D9B4F063FC81B.highlight.minted  0917C927AE474A323934256442795BC0.highlight.minted  0A2D238216A1EE81D2733D4A0FBEBF0A.highlight.minted  0B98825B8060E744BC22457AF2766324.highlight.minted  1836E11378762E7D2BBDADB9A3FC23C6.highlight.minted  1B3893C36DC169D685564D8293C4C927.highlight.minted  1B8E8B3ACC4107BEC61664D1E815B487.highlight.minted  1FD348BF9641B0FF10C30EDFD4131380.highlight.minted  28D7E79820C75A6DB46A63ABD5F80499.highlight.minted  29F5DD0C2C60C03A769ED01C4AA85628.highlight.minted  2AB49A192D21C51FB30D552ABE785606.highlight.minted  2BFB9E739B81477171F4A0D530C8E6F6.highlight.minted  2CC1A523175C981826F8B82E0B414E02.highlight.minted  2DE5F1FA5609BB3D18D33AE18A472B0D.highlight.minted  2FB70D7E058AEF865D6FC356E0FB560C.highlight.minted  392460E8C6B3652C410FD6AAC9E10D5D.highlight.minted  3986EA7F78413FA24D4E62BF0CB632C1.highlight.minted  3F21D2258EF4AD3E2FE57DCF40B9FD1D.highlight.minted  47FDF1946DEE192F88002385359C0BB5.highlight.minted  48D477B574548337A69D44791E494B0E.highlight.minted  50C969E43DF4FAA8B4C1BF2C328F0744.highlight.minted  519F35FD51F7F96A7823AD1FDFF9EB80.highlight.minted  521C91C2D95E529FBB2682A457A3A2C9.highlight.minted  574BCCF2E44EC1656943C93DBCFD2BB3.highlight.minted  57BD2838A0CD00E82606A344D068D5CB.highlight.minted  5A4F9E58B863EA85B9D6C96347A9F50B.highlight.minted  5DFED62EDAE23F32F7A918481367C081.highlight.minted  5FE97B00A877125B387E709644177296.highlight.minted  627A67CEA3652B218060AA776339B6CF.highlight.minted  628F4B3559C9B3A646E0BCDA1EDA0755.highlight.minted  62A5BBF64331F209101F87DA3D122556.highlight.minted  631BE861232B217BFE798B3F4965669A.highlight.minted  65A7D83D978F7FA8CA061E27CEC18369.highlight.minted  65BAF7E49A8FF2441AA463C2A8FB754B.highlight.minted  (+46 more)
docs/: AUDIT_2025-12-31.md  AUDIT_2026-01-01_INDEPENDENT.md  AUDIT_RESULTS.md  AUDIT_SUMMARY.md  BOOK_AUDIT.md  CURRENT_WORK.md  GAP_ANALYSIS.md  INDEX.md  IPW_SAFEGUARDS_COMPLETE_2025-11-20.md  KNOWN_BUGS.md  KNOWN_LIMITATIONS.md  METHODOLOGICAL_CONCERNS.md  METHOD_SELECTION.md  PSM_SESSION_1_COMPLETE_2025-11-21.md  PYTHON_VALIDATION_ARCHITECTURE.md  PYTHON_VALIDATION_SUMMARY_2025-11-20.md  QUICK_FIXES_COMPLETE_2025-11-20.md  QUICK_REFERENCE.md  ROADMAP.md  ROADMAP_REFINED_2025-11-23.md  SESSION_10_MODERN_DID_2025-11-21.md  SESSION_11_IV_FOUNDATION_2025-11-21.md  SESSION_13_GMM_ESTIMATOR_2025-11-21.md  SESSION_14_SHARP_RDD_2025-11-22.md  SESSION_15_RDD_DIAGNOSTICS_2025-11-22.md  SESSION_16_FUZZY_RDD_2025-11-22.md  SESSION_17_JULIA_DID_PHASE_1_2025-11-22.md  SESSION_18_STAGGERED_DID_BOOTSTRAP_FIX_2025-11-23.md  SESSION_19_TEST_FIXES_PART_A_2025-11-23.md  SESSION_4_RCT_2025-11-21.md  SESSION_5_IPW_2025-11-21.md  SESSION_7_PSM_MONTE_CARLO_2025-11-21.md  SESSION_8_DID_FOUNDATION_2025-11-21.md  VALIDATION_CHECKLIST_TEMPLATE.md  VALIDATION_CLEANUP_2025-11-20.md
julia/: Project.toml
scripts/: capture_golden_results.py  validate_book_imports.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_package_import.py
(+629 files in other folders)
