[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-inference-mastery"
version = "0.1.0"
description = "Rigorous causal inference implementation in Python and Julia"
readme = "README.md"
authors = [
    {name = "Brandon Behring", email = "brandon@example.com"}
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Causal inference libraries
    "pyfixest>=0.18.0",          # Modern DiD
    "linearmodels>=5.3",         # IV, Panel
    "econml>=0.14.1",            # CATE
    "dowhy>=0.11",               # DAGs
    "causaldata>=0.1.3",         # Classic datasets
]

# Package discovery for src layout
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"causal_inference" = ["py.typed"]

[project.optional-dependencies]
mcmc = [
    "pymc>=5.10",
    "arviz>=0.18",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",       # Parallel testing
    "hypothesis>=6.82.0",        # Property-based testing
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "ipython>=8.17.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
]

# Black formatter configuration
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | archive
)/
'''

# Ruff linter configuration
[tool.ruff]
line-length = 100
target-version = "py39"

select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "ANN",   # flake8-annotations
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
]

ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN"]  # Don't require annotations in tests

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-v",
    "--cov=src/causal_inference",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
    "--strict-markers",
    "--tb=short",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "monte_carlo: marks Monte Carlo validation tests",
    "cross_language: marks cross-language validation tests",
    "e2e: marks end-to-end workflow tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 90

[tool.coverage.html]
directory = "htmlcov"

# Mypy type checking configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "statsmodels.*",
    "pyfixest.*",
    "linearmodels.*",
    "econml.*",
    "dowhy.*",
    "causaldata.*",
    "pymc.*",
    "arviz.*",
]
ignore_missing_imports = true
